feat: invest options

--- a/src/mdx/thinking/invest.mdx
+++ b/src/mdx/thinking/invest.mdx
@@ -393,6 +393,43 @@ https://www.zhihu.com/question/60003550/answer/104100426625
 评论：
 - 期权自带杠杆，但是比期货合约风险小，而对一般人来说期权最好的用法是如果长期看好某家公司可以直接leapscall，比正股赚得多
 
+### 为什么卖put
+我只会在一种情况下卖put。就是我想买某个股票或者基金，但是现价太高了，我觉得现在买不合算，那我就先去卖它的put。
+
+拿新东方来举例子，我卖出put后会出现两种情况：
+1. 新东方股价跌破了行权价，put买方行权，我以更低的价格接手了股票。
+2. 新东方被俞敏洪掰回了一局，股价一路高歌，远远超过了行权价，期权在put买方手上已经变成了废纸，权利金已经稳稳的进了我口袋。
+
+我作为期权卖方，怎么看都是赚的。我本来就想买新东方的股票，情况1成全了我的梦想；情况2让我干躺着数票子。
+
+这招我是跟段叔叔学的，段叔叔买拼多多、新东方、阿里巴巴*和腾讯*都用的这招，在股价高位卖put，等跌破行权价再建仓买股票。
+
+而且他可以滚动执行这样的策略，如果价格不跌，那么躺着收期权金；如果价格跌下来，那就继续用收的期权金买股票噻。
+
+用这一招，可以冲抵股未来购入股票的成本，有个专业术语来形容这招，叫cost basis reduction成本削减。
+
+除了段叔叔，老巴也喜欢用这招。老巴爷爷曾陆续卖出5万张可口可乐*的看跌期权，来冲抵股票成本。
+
+以上卖put我想应该讲得很清楚了。
+
+<HighlightText color='red'>
+卖call有点不一样，裸卖call风险是很大很大的。一般玩法是手里有现货股票，再去卖call。
+</HighlightText>
+（裸卖call或者卖出无担保看涨期权：sell naked call）,裸卖call是各种短线金融操作中风险最大的一个，是典型的的低收益、高风险的金融操作。段叔叔也在自己的评论区反复提醒：高危操作，不要模仿。
+
+<HighlightText color='red'>
+还有一种非常保险的做法是sell covered call。前面是naked，这里是covered，你应该能看出区别：前者没有现货，后者有现货。
+</HighlightText>
+
+sell covered call就安全多了，有股票现货在手，即使股价涨过行权价，但是手上的股票也在涨，可以对冲掉期权的损失。
+
+以上就是卖call的两种情况：sell covered call和sell naked call。
+
+总结：
+1. 想买股票又嫌贵，请先卖put。
+2. 手里有货，怕跌，卖call。
+3. 手里没票，想赌一把大的，卖裸call。
+
 ## A股
 A股怎么走？
 
