--- a/src/mdx/thinking/invest.mdx
+++ b/src/mdx/thinking/invest.mdx
@@ -306,6 +306,7 @@ import HighlightText from '../../components/HighlightText';
 记住：一切收益都是风险的代偿。
 市场总体是公平的，一分风险一分价钱。对于买方和卖方都是如此。其实并不存在卖方和买方哪方更好的说法
 
+* 行情波动小的时候利率低。
 * 卖权具有明显的“收益有限、风险无限”
 * 发生币对成交玩家就会亏损
 * BTC 价格飙涨的风险（机会成本）：
@@ -318,6 +319,28 @@ import HighlightText from '../../components/HighlightText';
 
 利息的来源就是你卖出期权的权利金，高卖就是卖call。
 
+### 非保本
+所以回到我们谈的双币理财类产品为结构化产品的非保本主要体现在:
+1. 持U想赚U的话，如遇到结算日时刻大幅下跌超过期权签约价则存在U换成B造成无偿损失；
+2. 如B本位思考，持B想赚B的话，如遇到结算日时刻价格大幅上涨超过期权签约价格则存在B换成U造成卖飞损失。
+
+### 适合场景
+- <HighlightText> 牛市行情: </HighlightText>
+这时候建议以设定的合理价格对标的进行定抛。例如：牛市是现货价格BTC7WU，可以分别设置卖Call，8WU、9WU等价格做定抛。
+
+- <HighlightText> 震荡行情: </HighlightText>
+个人不建议大仓位在震荡市做低吸和高抛。小仓位如果报着学习或者就是特别忍不住想要交易相对而言双币理财在这种行情下比期货合约风险小，比现货交易有“赚到了”的快感
+
+- <HighlightText> 熊市行情: </HighlightText>
+结合双币理财和直接“抄底”的对比，建议在合理价格区间以卖put的方式囤BTC和ETH（其他看好山寨币类似）。例如：当前ETH价格为1300U，分别在1100U，900U等价格点分笔买入（相当于定投的替代品）。新手不建议在熊市一会卖put，一会卖call做波段区间，如果具备这种能力不如做期货合约收益更高、更直接。
+
+- 囤B党收益增强-卖Put
+
+- 我卖put的时候多数都是贴着市场价卖，因为我认为从未来10年的角度看，现在BTC和ETH价格很便宜，put进来我就拿着（甚至可以再卖一个同价位的call），不put进来我就赚权利金。
+
+- 特定行情使用,一些投资者认为适合震荡市使用。我个人结合半年多实操经验觉得本身Crypto是个隐含波动率很高的市场，下注长期震荡本身就是小概率时间，所以我在实操过程中更多是在急涨和急跌行情中使用。同时，作为期权卖方在隐含波动率越大卖出权利金越高，因此此时的盈亏比更划算；如果作为买方则相反，双币理财是卖方所以才有我上文说的策略选择。
+
+所以深入学习我觉得没有捷径，建议阅读John C.Hull的《期权、期货及其他衍生产品》和Sheldon Natenberg的《期权波动率与定价——高级交易策略与技巧》。
 
 ## 卖方本质就是承接风险而提高了成功概率，加上又牺牲了收益，所以做卖方最好做短线，同时严格风控就行了
 这是机构的玩法，普通人跟不上，段永平作为拼多多股东，手里有大量的股票现货仓位，就会不断选择卖call，去年他曾晒单卖call拼多多一次赚了340万刀。
@@ -408,7 +431,7 @@ https://www.zhihu.com/question/60003550/answer/104100426625
 
 用这一招，可以冲抵股未来购入股票的成本，有个专业术语来形容这招，叫cost basis reduction成本削减。
 
-除了段叔叔，老巴也喜欢用这招。老巴爷爷曾陆续卖出5万张可口可乐*的看跌期权，来冲抵股票成本。
+除了段叔叔，老巴也喜欢用这招。老巴爷爷曾陆续卖出5万张可口可乐的看跌期权，来冲抵股票成本。
 
 以上卖put我想应该讲得很清楚了。
 
