feat: add trade

--- a/src/mdx/trader/00-市场永远不会错.mdx
+++ b/src/mdx/trader/00-市场永远不会错.mdx
@@ -47,3 +47,6 @@ import HighlightText from '../../components/HighlightText';
 * Indicators——技术分析信号，越多越好(多技术方法共同参照原则)。
 * Never trade in the belief the market is wrong.——绝不可带着“市场错了”的成见从事交易。
 * Examine the market's reaction to news.——注意研究市场对基本面信息的反应。
+
+## singal
+<LinkRender alt='十年美债收益' path='https://www.tradingview.com/symbols/TVC-US10Y/' />
