feat: trade methods

--- a/src/mdx/trade/trade.mdx
+++ b/src/mdx/trade/trade.mdx
@@ -1,9 +1,24 @@
 ## 采访来源
 https://m.bilibili.com/video/BV14j411j72g
 
+## “交易不是比谁赚得快，而是比谁活得久。”这成为了苏冰留给交易者最后的忠告。
+他给新手提供了四点生存指南：
+1. 仓位管理大于技术分析，轻仓能保命；
+2. 盈利出金才是真钱；
+3. 止损线是生命线；
+4. 历史会重演，但不会简单重复。
+
 ## 1
 厉害的一句话，刚开始稳定盈利的阶段，只因为遵循一个原则，就是轻仓
 
 ## 2
 
 只做一个方向
+
+## 3 交易心法与实战风格（从公开演讲与采访中归纳）
+通过苏冰在行业大会的演讲稿、接受采访的记录以及他在社群中分享的实盘经验，可以归纳出其交易理念的若干核心要点：
+
+1. 技术+心态并重：他曾强调交易不是单靠某一种工具即可长期盈利，技术（指标与系统）和交易者的心态同样关键。
+2. 以趋势为主、顺势为王：公开演讲里提到的择时规则多以均线和周期共振为核心，强调在明确趋势下做主方向的仓位配置。
+3. 严守风险管理：从其经历（早期的爆亏到后期的稳定）可以看出，苏冰后来对仓位控制和止损有更严格的制度化思考，这也是他得以规模化运作的重要原因。
+4. 经验化与系统化结合：苏冰在演讲中多次提到“把个人经验写进规则”，将主观判断尽可能模块化、标准化，以便在市场波动中维持一致性。
