--- a/src/mdx/trade/trade.mdx
+++ b/src/mdx/trade/trade.mdx
@@ -22,3 +22,58 @@ https://m.bilibili.com/video/BV14j411j72g
 2. 以趋势为主、顺势为王：公开演讲里提到的择时规则多以均线和周期共振为核心，强调在明确趋势下做主方向的仓位配置。
 3. 严守风险管理：从其经历（早期的爆亏到后期的稳定）可以看出，苏冰后来对仓位控制和止损有更严格的制度化思考，这也是他得以规模化运作的重要原因。
 4. 经验化与系统化结合：苏冰在演讲中多次提到“把个人经验写进规则”，将主观判断尽可能模块化、标准化，以便在市场波动中维持一致性。
+
+## 4. 定投，就是我们这种不太聪明的人干的事。
+不猜涨跌，不盯K线，
+做一个没有情绪的沙雕
+定期买、闭眼买、涨跌都买。
+
+还傻傻的告诉自己
+市场暴跌时，你在攒筹码；
+市场狂欢时，你在等时间， 
+很无聊，让人感觉会，真的特傻逼的。
+
+看起来毫无技术含量，
+
+但是却用最笨的纪律打败了人性里的贪婪和恐惧。  
+
+都说聪明人总想"高抛低吸"，结果往往被市场打脸；
+
+而"傻子"只管低头播种，最后反而收走了时间的复利。
+  
+定投的魔力，就是承认自己不够聪明，却用坚持把简单变成利器。
+  
+毕竟财富的雪球，从来不是靠豪赌滚起来的。
+
+## 内心战争
+1. 和“贪婪”作战
+当价格上涨时，人会很想继续持有，幻想能赚更多，结果常常错过最佳的卖出时机。
+这时候需要克制贪婪，遵守原本的交易计划，而不是被欲望驱动。
+
+2. 和“恐惧”作战
+当价格下跌时，恐惧会让人割肉离场，甚至在最低点卖掉。
+恐惧还会让人不敢入场，错失机会。
+成熟的交易者要学会面对亏损，把它当作“成本”，而不是灾难。
+
+3. 和“自我怀疑”作战
+亏损时会怀疑自己的系统、方法甚至能力。
+赚钱时又容易过度自信，觉得自己“无所不能”。
+稳定的心态需要接受：交易结果受概率影响，不可能全对。
+
+4. 和“冲动”作战
+交易环境变化快，很容易被市场情绪带动，做出没有计划的操作（追涨杀跌）。
+内心的战争就是要学会冷静，执行纪律，而不是情绪化决策。
+
+5. 和“耐心”作战
+很多时候市场并没有机会，但人性抗拒空仓，会忍不住去下单。
+结果常常是低质量交易，赔掉耐心。
+真正的高手懂得等待。
+
+## 盈利的人通常比亏损的人更能控制内心：
+- 不被贪婪冲昏头
+
+- 不被恐惧打垮
+
+- 能坚持策略
+
+你问过交易心理问题，这说明你在思考心态，这也是很重要的能力。
