--- a/src/mdx/trade/realTrade.mdx
+++ b/src/mdx/trade/realTrade.mdx
@@ -1,22 +1,52 @@
-
 ## Real Trade
 1. 不要补仓,尤其亏损不要补仓
 ```
 2025/09/14 一把亏光1000 u的经验
 ```
+  - 亏损时补仓会激发赌性。
+  - 每次大额亏损，往往就是因为妄想“下一次翻回来”。
+
+2. 看淡每一笔亏损，不要激发赌性，一定要记得,每次大额亏损都和这个相关
+```
+不要执着在下一次加大筹码赢回来
+```
+  - 不要执着于追求补回亏损。
+  - 将每笔亏损视作成本的一部分，保持心态平稳。
 
 2. 不要情绪化交易，激发赌性
 ```
 2025/09/14 一把亏光1000 u的经验
 之所以亏，是因为那一刻不知道为什么自曝自弃了,一直在亏损补仓，妄想平摊成本
 ```
+  - 情绪化交易必然导致连续亏损。
+  - 自曝自弃、妄想平摊成本是最大的风险点。
 
-3. 1小时的期权里，前30分钟都不要长期持有，抱着做差价的心态，低买高卖
+3. 轻仓操作，赚一点就收: 能赚一分就赚一分，千万别梭哈
+```
+轻仓，能赚一点就一点
+赌性是怎么来的呢？之前辛苦小赚好不积累的资金，在一次小亏中回撤了一部分
+然后下一把就像一把把之前的盈利赚回来，然后就上头赌性来了
 
-4. 下单看清sell,还是up
+然后亏光了所有
+
+2025/09/14 一把亏光1000 u的经验
+```
+  - 1小时 K 小仓位差价交易。
+  - 能赚一分就赚一分，不要追求一次大赢。
+
+4. 1小时的期权里，前30分钟都不要长期持有，抱着做差价的心态，低买高卖
+
+5. 下单看清sell,还是up
 ```
 2025/09/14 一把亏光1000 u的经验
 ```
+
+5. 掌握期权时间节奏:早期别梭哈，别妄想跌了很多就会涨，在50c买入，挂单60c，卖出，这个风险也是很高的
+```
+有几次都死在这里,一定要牢记
+```
+  - 前 30 分钟不要长期持有。
+  - 抱着“做差价”的心态，低买高卖，短线操作。
 
 ## 对冲
 1. 警惕对冲越下越大，一定要警惕
@@ -24,3 +54,16 @@
 这会一把亏光所有
 一定要警惕
 ```
+
+## 不要玩15m,就是纯赌场
+
+## CHAT-GPT
+- 设止损和目标：每笔交易预设止损和盈利目标，避免冲动操作。
+
+- 每日交易上限：亏损达到预设上限就停止交易，避免连续亏损。
+
+- 资金管理：总资金只动小部分（比如 5-10%），即使亏也不会影响整体资金安全。
+
+- 复盘习惯：每笔交易结束后记录原因、心态、结果，长期积累经验。
+
+- 避免连续操作：连续亏损后，最好暂停一段时间，避免上头。
