--- a/src/mdx/trade/realTrade.mdx
+++ b/src/mdx/trade/realTrade.mdx
@@ -1,47 +1,61 @@
+import HighlightText from '../../components/HighlightText';
+
 ## Real Trade
-1. 不要补仓,尤其亏损不要补仓
+<br/>
+
+1. <HighlightText color='blue'>不要亏损补仓</HighlightText>
 ```
-2025/09/14 一把亏光1000 u的经验
+2025/09/14 一把亏光1000 u的经验:
 ```
   - 亏损时补仓会激发赌性。
   - 每次大额亏损，往往就是因为妄想“下一次翻回来”。
 
-2. 看淡每一笔亏损，不要激发赌性，一定要记得,每次大额亏损都和这个相关
+<br/>
+
+2. <HighlightText color='blue'>看淡每一笔亏损，不要激发赌性，每次亏损的经历：每次大额亏损都和赌性相关</HighlightText>
 ```
 不要执着在下一次加大筹码赢回来
 ```
   - 不要执着于追求补回亏损。
   - 将每笔亏损视作成本的一部分，保持心态平稳。
 
-2. 不要情绪化交易，激发赌性
+<br/>
+
+2. <HighlightText color='blue'>不要情绪化交易，激发赌性</HighlightText>
 ```
-2025/09/14 一把亏光1000 u的经验
+2025/09/14 一把亏光1000 u的经验:
 之所以亏，是因为那一刻不知道为什么自曝自弃了,一直在亏损补仓，妄想平摊成本
 ```
   - 情绪化交易必然导致连续亏损。
   - 自曝自弃、妄想平摊成本是最大的风险点。
 
-3. 轻仓操作，赚一点就收: 能赚一分就赚一分，千万别梭哈
+<br/>
+
+3. <HighlightText color='blue'>轻仓操作，赚一点就收: 能赚一分就赚一分，千万别梭哈</HighlightText>
 ```
+2025/09/14 一把亏光1000 u的经验:
+
 轻仓，能赚一点就一点
 赌性是怎么来的呢？之前辛苦小赚好不积累的资金，在一次小亏中回撤了一部分
 然后下一把就像一把把之前的盈利赚回来，然后就上头赌性来了
 
 然后亏光了所有
-
-2025/09/14 一把亏光1000 u的经验
 ```
   - 1小时 K 小仓位差价交易。
   - 能赚一分就赚一分，不要追求一次大赢。
 
-4. 1小时的期权里，前30分钟都不要长期持有，抱着做差价的心态，低买高卖
+4. <HighlightText color='blue'>1小时的期权里，前30分钟都不要长期持有，抱着做差价的心态，低买高卖</HighlightText>
+
+<br/>
 
 5. 下单看清sell,还是up
 ```
 2025/09/14 一把亏光1000 u的经验
 ```
 
-5. 掌握期权时间节奏:早期别梭哈，别妄想跌了很多就会涨，在50c买入，挂单60c，卖出，这个风险也是很高的
+<br/>
+
+6. <HighlightText color='blue'>掌握期权时间节奏:早期别梭哈，别妄想跌了很多就会涨，在50c买入，挂单60c卖出，这个风险也是很高的</HighlightText>
 ```
 有几次都死在这里,一定要牢记
 ```
@@ -49,13 +63,11 @@
   - 抱着“做差价”的心态，低买高卖，短线操作。
 
 ## 对冲
-1. 警惕对冲越下越大，一定要警惕
+1. <HighlightText color='blue'>警惕对冲越下越大，一定要警惕</HighlightText>
 ```
 这会一把亏光所有
 一定要警惕
 ```
-
-## 不要玩15m,就是纯赌场
 
 ## CHAT-GPT
 - 设止损和目标：每笔交易预设止损和盈利目标，避免冲动操作。
