feat: trade video

--- a/src/mdx/trade/realTrade.mdx
+++ b/src/mdx/trade/realTrade.mdx
@@ -1,5 +1,7 @@
 import HighlightText from '../../components/HighlightText';
 
+import VideoBox from '../../components/videoBox';
+
 ## Real Trade
 <br/>
 
@@ -79,3 +81,25 @@ import HighlightText from '../../components/HighlightText';
 - 复盘习惯：每笔交易结束后记录原因、心态、结果，长期积累经验。
 
 - 避免连续操作：连续亏损后，最好暂停一段时间，避免上头。
+
+
+## 交易2点
+- 耐心
+- 学习和思考能力
+
+<VideoBox 
+  path='/video/trade-patience.mp4' 
+  title="交易耐心的重要性"
+  description="这个视频展示了在交易中保持耐心的重要性，以及如何避免情绪化交易。"
+/>
+
+<br />
+
+## 交易和德行
+
+<VideoBox 
+  path='/video/virtueAndAsset.mp4' 
+  title="交易和德行"
+  description="交易和德行"
+/>
+
