--- a/src/mdx/trade/tradersDifferent.mdx
+++ b/src/mdx/trade/tradersDifferent.mdx
@@ -1,6 +1,8 @@
 ## Tue Oct 14 10:10:44 CST 2025
 能长期成功做交易的人，确实常常会被外界觉得“有点疯”，但那种“疯”其实更多是一种反常识的理性与纪律。
 
+成功的交易者之所以像疯子，是因为他们在一个充满情绪的世界里保持了极端的理性。
+
 ### 一、从普通人的角度看，他们像“疯子”
 - 大多数人讨厌亏损、追求确定性； 
   - 而成功的交易者愿意不断止损、接受不确定性。
