--- a/src/mdx/trade/trade202509.mdx
+++ b/src/mdx/trade/trade202509.mdx
@@ -33,3 +33,22 @@ import VideoBox from '../../components/videoBox';
 慢就是快，资金安全第一，区块链是黑暗森林，可不是股票，区块链这到处都是坑,尝试各种折腾，如果按照以前的节奏，现在账户就新高了
 
 - 这波要出金一部分了，对交易有了新的感悟
+
+## 心情不好 → 交易受影响
+交易员们，请一定照顾好自己！
+
+连环爆仓、连续亏损，很容易让人心情低落
+
+心情不好 → 交易受影响 → 亏更多钱
+
+有条件的，去海边度假，调节下身心 🌴🏖️
+
+没条件的，补充维生素 D、5-HTP
+
+保持乐观，不被市场和天气打败
+
+<VideoBox 
+  path='/video/donotLoseyourself.mp4' 
+  title="保持乐观"
+  description="保持乐观"
+/>
