--- a/src/mdx/trade/action.mdx
+++ b/src/mdx/trade/action.mdx
@@ -1,3 +1,5 @@
+import ImageRender from '../../components/ImageRender';
+
 ## 行动:长期稳健翻身策略
 - 核心资金做高收益双币滚动复利
 - 不靠短线赌博去翻身，避免重复亏损
@@ -34,3 +36,26 @@
 - 亏损焦虑：已有亏损会让人容易追涨杀跌，增加风险
 
 > 关键是：你不是不适合投资，而是短期高波动产品容易让你情绪化操作
+
+
+# 复盘
+
+## 言
+Wed Oct 22 01:19:07 CST 2025
+
+交易做的好的人，情绪也会相对稳定，急躁的人是做不好交易的，这个跟你的命有关。天赋大于努力，机会大于能力。
+
+普通人在股市 都只能是用时间换空间 而能做时间的玫瑰 耐得住寂寞的人 情绪肯定稳定
+
+## 复盘 Wed Oct 22 01:09:44 CST 2025
+- 暂时我是合约和双币轮流做的，没有好的点位我就买一天双币,等一天，没有点位我再买一天
+    - 但是问题是我双币设定20%，112000 的价位还是被击穿了，所以这个策略价格一定设置高,否则很亏
+
+- 目前的缺点在于合约拿不住，不是点位问题
+
+- 不会吧，如图，继续涨，又卖飞，这样搞合约肯定不行!
+
+<ImageRender alt='test1' width='30%' height='auto' path='/notes/20251021.jpg' />
+
+## “来币圈不都是来翻身的么”
+分资金做，要么不做，合约是绕不开的，除非你对币圈不感兴趣
