--- a/src/mdx/trade/action.mdx
+++ b/src/mdx/trade/action.mdx
@@ -51,7 +51,7 @@ Wed Oct 22 01:19:07 CST 2025
 - 暂时我是合约和双币轮流做的，没有好的点位我就买一天双币,等一天，没有点位我再买一天
     - 但是问题是我双币设定20%，112000 的价位还是被击穿了，所以这个策略价格一定设置高,否则很亏
 
-- 目前的缺点在于合约拿不住，不是点位问题
+- 目前的缺点在于合约拿不住，不是点位问题,点位通过双币解决
 
 - 不会吧，如图，继续涨，又卖飞，这样搞合约肯定不行!
 
