feat: daily note

--- a/src/mdx/trade/action.mdx
+++ b/src/mdx/trade/action.mdx
@@ -59,3 +59,34 @@ Wed Oct 22 01:19:07 CST 2025
 
 ## “来币圈不都是来翻身的么”
 分资金做，要么不做，合约是绕不开的，除非你对币圈不感兴趣
+
+
+## 复盘 Wed Oct 22 23:44:24 CST 2025
+总结：一定要分清：
+1. 震荡趋势
+2. 上升趋势
+3. 下跌趋势
+4. 博弈趋势，多空纠缠
+
+亏损的一单，如图1min 的kline,明显上涨趋势,尽管是1000u 的涨幅差价，最后也被逼仓，幸好止损在31c,
+
+- 其实更好的选择是在上涨趋势早点止损down 的仓位，你看好800u的差价，其实在上涨趋势中很容易被突破。
+
+单记录：
+- Sold 5.00 Down  at 31¢ ($1.55)
+
+- Bought 2.64 Down  at 97¢ ($2.56)
+
+- Bought 2.36 Down  at 97¢ ($2.29)
+
+
+<ImageRender alt='test1' width='30%' height='auto' path='/notes/20251022-1.png' />
+
+<br/>
+
+<ImageRender alt='test1' width='50%' height='auto' path='/notes/20251022.png' />
+
+- 同理，下降趋势别怕买down
+
+<ImageRender alt='test1' width='30%' height='auto' path='/notes/20251022-3.jpg' />
+
