--- a/src/mdx/trade/action.mdx
+++ b/src/mdx/trade/action.mdx
@@ -4,9 +4,10 @@ import ImageRender from '../../components/ImageRender';
 - 核心资金做高收益双币滚动复利
 - 不靠短线赌博去翻身，避免重复亏损
 
+<br/>
 理财理性 vs 赌博心理 的冲突。我们可以从几个角度来分析：
 
-认识自己心理模式
+### 1.认识自己心理模式
 
 - 冲动交易：短线交易带来心理刺激，但亏损和压力叠加
 
@@ -16,7 +17,7 @@ import ImageRender from '../../components/ImageRender';
 
 关键是：你不是不适合投资，而是短期高波动产品容易让你情绪化操作
 
-### “情绪化赌场”
+### 2.polymarket“情绪化赌场”
 - 结算周期短 → 每小时或每天结算，刺激心理即时反馈
 - 无杠杆限制，但本金小也可能快速输掉 → 很容易“追输”
 - 胜率不可控 → 纯靠概率和市场走势，没有长期可持续边际优势
@@ -26,7 +27,7 @@ import ImageRender from '../../components/ImageRender';
 情绪影响决策 → 想“翻本”反而加大亏损
 ```
 
-> 本质上，这种产品和赌博没区别，止损规则在情绪极端下几乎难以执行
+> 本质上，这polymarket和赌博没区别，止损规则在情绪极端下几乎难以执行
 
 ### 认识自己心理模式
 - 冲动交易：短线交易带来心理刺激，但亏损和压力叠加
@@ -37,15 +38,19 @@ import ImageRender from '../../components/ImageRender';
 
 > 关键是：你不是不适合投资，而是短期高波动产品容易让你情绪化操作
 
+<br/>
 
 # 复盘
 
-## 言
-Wed Oct 22 01:19:07 CST 2025
-
+## 言 Wed Oct 22 01:19:07 CST 2025
 交易做的好的人，情绪也会相对稳定，急躁的人是做不好交易的，这个跟你的命有关。天赋大于努力，机会大于能力。
 
 普通人在股市 都只能是用时间换空间 而能做时间的玫瑰 耐得住寂寞的人 情绪肯定稳定
+
+## “来币圈不都是来翻身的么”
+Wed Oct 22 01:19:07 CST 2025
+
+分资金做，要么不做，合约是绕不开的，除非你对币圈不感兴趣
 
 ## 复盘 Wed Oct 22 01:09:44 CST 2025
 - 暂时我是合约和双币轮流做的，没有好的点位我就买一天双币,等一天，没有点位我再买一天
@@ -57,9 +62,7 @@ Wed Oct 22 01:19:07 CST 2025
 
 <ImageRender alt='test1' width='30%' height='auto' path='/notes/20251021.jpg' />
 
-## “来币圈不都是来翻身的么”
-分资金做，要么不做，合约是绕不开的，除非你对币圈不感兴趣
-
+<br/>
 
 ## 复盘 Wed Oct 22 23:44:24 CST 2025
 总结：一定要分清：
@@ -68,6 +71,7 @@ Wed Oct 22 01:19:07 CST 2025
 3. 下跌趋势
 4. 博弈趋势，多空纠缠
 
+<br/>
 亏损的一单，如图1min 的kline,明显上涨趋势,尽管是1000u 的涨幅差价，最后也被逼仓，幸好止损在31c,
 
 - 其实更好的选择是在上涨趋势早点止损down 的仓位，你看好800u的差价，其实在上涨趋势中很容易被突破。
