--- a/src/mdx/trade/action.mdx
+++ b/src/mdx/trade/action.mdx
@@ -94,3 +94,13 @@ Wed Oct 22 01:19:07 CST 2025
 
 <ImageRender alt='test1' width='30%' height='auto' path='/notes/20251022-3.jpg' />
 
+## 复盘 Fri Oct 24 11:05:31 CST 2025
+一把亏4u的单子，主要是：
+
+- 没严格遵守纪律，在中间96买入，应该要执行在尾盘买入
+
+- 在趋势down的时候还抱有幻想，不止损
+
+主要原因是第一个，没有坚持尾盘买入，并且第二点没执行导致更大的亏损
+
+<ImageRender alt='test1' width='30%' height='auto' path='/notes/20251023.png' />
