--- a/src/mdx/polyTrade/intuition.mdx
+++ b/src/mdx/polyTrade/intuition.mdx
@@ -231,3 +231,139 @@ B. 不能：
 长期结果是：
 1. 你不是靠“更聪明”赚钱，
 2. 而是靠“更少犯致命错误”赚钱。
+
+## 实盘，这一根怎么用？
+Mon Dec 15 18:45:50 CST 2025
+
+❌ 错误思路
+
+“你说 YES，那我就直接买 YES”
+
+这是你之前反复踩雷的地方。
+
+### 正确用法（符合你一直在追求的专业交易逻辑）
+这一根只回答一个问题：
+
+👉 能不能做 NO？
+
+答案是：
+不建议
+
+但 YES：
+- 只能在 firstSide = YES
+- 且价格未快速跌破 70
+- 才能考虑小仓位参与
+
+否则：
+- 直接跳过
+- 等下一根 15min
+
+## 哪我应该什么时候买？
+你是在“最差的价格”买的 NO firstSide 到 90 的含义不是机会，而是： 
+
+市场已经 price-in 了 NO 你是： 
+
+最晚进场 风险最大
+
+一句话总原则（先记住）
+
+- NO 永远不在“到 90 的那一刻买”，
+- NO 只在“90 失败 / 回撤后 / 延续确认”时买。
+
+### 第一类：90 失败 → 回撤 → 再给 NO（胜率最高，最适合你现在）
+结构特征:
+1. firstSide = NO
+
+2. 但价格没站住 0.9
+
+3. firstSideLow ≤ 0.6（最好 ≤ 0.5）
+
+4. 之后 重新回到 0.75–0.85 区间
+
+你该怎么做
+
+- ❌ 不在 0.9 买
+- ✅ 在 回撤后第二次上来 买
+```
+简单理解
+
+1. 第一次冲 90 → NO 失败 → 记录
+
+2. 回撤到 0.6–0.7 → 等待
+
+3. 第二次反弹到 0.7–0.85 → 买入
+```
+
+为什么这是好买点
+
+- 情绪已经被“洗掉”
+
+- 追高 NO 的人被甩下车
+
+你拿的是：
+- 更低价格
+- 更小止损
+- 更好的盈亏比
+
+👉 这是真正的“专业买 NO”
+
+### 第二类：连续 NO 成功后的延续单（趋势存在时）
+结构特征
+- 上一根：NO → NO
+- 再上一根：NO → NO
+- 当前这一根再次 firstSide = NO
+
+你该怎么做
+- 可以在 0.75–0.85 区间分批
+- 绝对不追 0.9
+
+为什么能买
+- 这时候 NO 已经不是“猜”，而是：
+- 趋势延续
+
+### 第三类：NO 的深度洗盘反击
+
+（低频，但一旦出现非常香）
+
+结构特征:
+- firstSide = NO
+- firstSideLow < 0.45
+- 甚至打到 0.3–0.4
+
+但最终：
+- finalSide = NO
+- 或 closePrice 明显偏 NO
+
+你该怎么做
+- 在 极低价试单
+- 仓位可以比平时略大
+
+为什么这是送钱结构
+
+市场已经：
+- 洗完多头
+- 洗完早空
+- 剩下的是被动成交
+
+## 三种你必须明确禁止买 NO 的情况
+### firstSide 刚到 90
+你这次犯的就是这个
+
+1. 没回撤
+2. 没失败
+3. 没确认
+
+### 上一根是 NO → YES
+- NO 刚被打脸
+- 你是在接飞刀
+
+### 连续震荡区间里追方向
+- YES / NO 高频交替
+- 没有连续性
+
+## 最重要的一句（你现在这个阶段必须刻在脑子里）
+- 方向不是用来追的，
+- 是用来等“风险被压缩”以后才参与的。
+
+你缺的是：
+👉 “等到好价格才动手”的纪律
