--- a/src/mdx/polyTrade/lossReview.mdx
+++ b/src/mdx/polyTrade/lossReview.mdx
@@ -11,3 +11,31 @@ import LinkRender from '../../components/LinkRender';
 止损不了
 
 <ImageRender alt='test1' width='60%' height='auto' path='/polyTrade/01-participateInTheFinalGamble.png' />
+
+
+## 大跌后继续跌的反弹的概率很高
+Fri Dec 19 09:22:39 CST 2025
+
+- 大跌后不要轻易追跌
+
+<LinkRender alt='亏损记录' path='https://polymarket.com/event/bitcoin-up-or-down-december-18-7pm-et?tid=1766107336194' />
+
+<br/>
+
+<ImageRender alt='test1' width='60%' height='auto' path='/polyTrade/02.png' />
+
+<br/>
+
+<ImageRender alt='test1' width='60%' height='auto' path='/polyTrade/03.png' />
+
+
+总结规律:
+
+- 大涨后容易跌
+  - 绿色大涨，后面收了2根红
+- 大跌后容易涨
+  - 收了红之后，开始初步收绿
+
+<br/>
+
+<ImageRender alt='test1' width='60%' height='auto' path='/polyTrade/04.png' />
