--- a/src/mdx/polyTrade/lossReview.mdx
+++ b/src/mdx/polyTrade/lossReview.mdx
@@ -39,3 +39,35 @@ Fri Dec 19 09:22:39 CST 2025
 <br/>
 
 <ImageRender alt='test1' width='60%' height='auto' path='/polyTrade/04.png' />
+
+## 反转分析 NO-->YES
+```
+December 21, 10:00 PM–10:15 PM ET
+差价：117.55671468
+firstSideHight: 0.96
+firstSideTime： 11:05:52.354
+反转拉升时间：11:07
+```
+
+- 一分钟k
+<ImageRender alt='' width='60%' height='auto' path='/polyTrade/07-1.png' />
+
+- 15分钟k
+<ImageRender alt='' width='60%' height='auto' path='/polyTrade/07-2.png' />
+
+## 反转分析 NO-->YES
+```
+December 21, 11:30 PM–11:45 PM ET
+差价：43.94754167
+firstSideHight: 0.95
+firstSideTime： 12:35:02.489
+反转拉升时间：12:38
+```
+
+- 一分钟k
+
+<ImageRender alt='' width='60%' height='auto' path='/polyTrade/05-1.png' />
+
+- 15分钟k
+
+<ImageRender alt='' width='60%' height='auto' path='/polyTrade/05-2.png' />
