--- a/src/mdx/trade/strategy2026.mdx
+++ b/src/mdx/trade/strategy2026.mdx
@@ -1,4 +1,18 @@
 ## Mon Dec 29 11:39:11 CST 2025
 亏损经验
 1. 低点不要双币
+```
+设定了 2026.12.29 88000,偏偏在 2026.12.29 早上2个小时从88200突破 9w,这种亏损不可限量
+```
 2. 低点用合约
+```
+所以结合上面，低点不要用双币，低点用 低倍合约！
+```
+
+### A-2.低点合约要拿住
+Mon Dec 29 11:42:30 CST 2025
+```
+0.2btc 12倍合约在 2026.12.28 在晚上平了，哎！
+
+为什么不坚持策略！
+```
