--- a/src/mdx/trade/strategy2026.mdx
+++ b/src/mdx/trade/strategy2026.mdx
@@ -16,3 +16,12 @@ Mon Dec 29 11:42:30 CST 2025
 
 为什么不坚持策略！
 ```
+
+### A-3.不要玩 polymarket
+```
+可以说上面的急于求成，一切都是 polymarket 造成的
+
+忍住！
+
+不要想着在 pm 赌场赚钱
+```
