feat: block chain

--- a/src/mdx/thinking/thinking1.mdx
+++ b/src/mdx/thinking/thinking1.mdx
@@ -1,6 +1,15 @@
 import ImageRender from '../../components/ImageRender';
 
 ## 情绪
+一个人身体要好，要长寿，其实非常简单，你只需要守闭身体的三个宝。
+
+第一个是人的眼睛，用眼过度会大量消耗精气神。所以在日常中我们要说闭目养神，让我们的眼睛得到真正的精气。
+
+第二个是守住嘴，话说多了容易伤元气，也容易惹是非，有句话叫做贵者语迟，越智慧的人越懂得语言的杀伤力。
+
+第三个就是守住你的心性，有句话叫少虑者心常，讲太多烦恼就多，这样很容易伤身体。所以我们要学会静下心的，凡事看开。
+
+## 情绪
 强者平静如水，弱者易怒如虎，
 智者解决问题，愚者发泄情绪，
 真正厉害的人，早已戒掉了情绪，
